# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Yang Liu
author_email = y.liu@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = python package for s2s forecasts with ai
keywords =
    S2S
    AI
long_description = file: README.md
long_description_content_type = text/markdown
name = s2spy
project_urls =
    Bug Tracker = https://github.com/AI4S2S/ai4s2s/issues
    Documentation = https://ai4s2s.readthedocs.io/
url = https://github.com/AI4S2S/ai4s2s
version = 0.2.1

[options]
python_requires = >=3.8,<3.11
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    netcdf4
    matplotlib
    numpy
    pandas
    scikit-learn
    scipy
    xarray
    lilio

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    isort
    mypy==0.981
    myst_parser
    pylint==2.15.6
    prospector[with_pyroma]==1.7.7  # https://github.com/PyCQA/prospector/issues/545
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    bokeh < 3.0.0
    tox
publishing =
    twine
    wheel

[options.packages.find]
include = s2spy, s2spy.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = s2spy
src_paths = s2spy,tests
line_length = 120
